--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=developer
 DB_USERNAME=root
-DB_PASSWORD=123456
+DB_PASSWORD=Root@123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
